--- a/ArtGallery/appsettings.json
+++ b/ArtGallery/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-0USKUF1;Database=Art_Gallery;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-0USKUF1;Database=Art_Gallery;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
